2000-05-25  Coder Infidel  <coder_infidel@hotmail.com>

	* Display a better string when identifying objects that have a
	  quantity
	* objs.h, actors.h: Made many member functions const
	* gamewin.h: Made a few arguments const
	* actors.cc: Fixed slight inventory problem, removed unused variable

2000-05-24  Jeff Freedman  <jeff@patches.simutech.com>

	* Finally got the 'sit' schedule to work.
	* Fixed pathfinding problem with getting stuck behind open doors.

2000-05-24  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* usecode.cc: implemented intrinsic 0x09 (clear_answers)

2000-05-24  Tristan Tarrant  <tarrant_tristan@emc.com>

	* usecode.cc: call endgame
	* exult.cc: press F10 to see the endgame sequence

2000-05-23  Jeff Freedman  <jeff@patches.simutech.com>

	* Support for lighting (torches, lamps, etc)

2000-05-23  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* Makefile.win32: added
	* Makefile.am: added Makefile.win32 to dist_targets

2000-05-22  Tristan Tarrant  <tarrant_tristan@emc.com>

	* */Makefile.am, configure.in, etc...: Rehauled build mechanism,
	no need to regenerate dependencies by hand, gcc dynamically does
	that, Makefile.am files are now much nicer and easier to maintain
	and this is the proper GNU way. Maybe I've broken Win32 builds...
	Removed old files as they can be found in CVS's attic.
	Made 'make dist' work (try it)

2000-05-22  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* exult.cc: added default case to key switch (kill warning)
	* objs.cc, imagewin.cc, actors.cc, gamewin.cc, gumps.cc,
	  actorio.cc, usecode.cc: re-ordered initializers to kill warnings
	* configure.in: added -Wno-long-long to Windows build, since
	  SDL and Windows header files contain long-long's

2000-05-21  Willem Jan Palenstijn <palenstijn@wanandoo.nl>
	* exult.cc, mouse.h: Wait_for_arrival() didn't restore on-screen 
	state of the mouse
	* configure.in: --enable-warnings turns on ALL warnings, in addition
	to everything --enable-debug does